; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket2.c_sonewconn.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket2.c_sonewconn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.sockaddr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.socket* @sonewconn(%struct.socket* %0, i32 %1, %struct.sockaddr* %2) #0 {
  %4 = alloca %struct.socket*, align 8
  %5 = alloca %struct.socket*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.sockaddr*, align 8
  %8 = alloca i32, align 4
  store %struct.socket* %0, %struct.socket** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.sockaddr* %2, %struct.sockaddr** %7, align 8
  %9 = load %struct.socket*, %struct.socket** %5, align 8
  %10 = load %struct.sockaddr*, %struct.sockaddr** %7, align 8
  %11 = call i32 @sflt_connectin(%struct.socket* %9, %struct.sockaddr* %10)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store %struct.socket* null, %struct.socket** %4, align 8
  br label %19

15:                                               ; preds = %3
  %16 = load %struct.socket*, %struct.socket** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call %struct.socket* @sonewconn_internal(%struct.socket* %16, i32 %17)
  store %struct.socket* %18, %struct.socket** %4, align 8
  br label %19

19:                                               ; preds = %15, %14
  %20 = load %struct.socket*, %struct.socket** %4, align 8
  ret %struct.socket* %20
}

declare dso_local i32 @sflt_connectin(%struct.socket*, %struct.sockaddr*) #1

declare dso_local %struct.socket* @sonewconn_internal(%struct.socket*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
